--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "webpack-dev-server": "2.3.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "prop-types": "^15.6.2",
     "react": "15.4.2",
     "react-dom": "15.4.2"
   }
